@@ -40,7 +40,7 @@
 
    No checking here!
  */
-SEXP KalmanLike(SEXP sy, SEXP sZ, SEXP sa, SEXP sP, SEXP sT, SEXP sV, SEXP sh, SEXP sPn, SEXP sUP, SEXP op)
+SEXP KalmanLike(SEXP sy, SEXP sZ, SEXP sa, SEXP sP, SEXP sT, SEXP sV, SEXP sh, SEXP sPn, SEXP sUP, SEXP op, SEXP fast)
 {
     SEXP res, ans = R_NilValue, resid = R_NilValue, states = R_NilValue;
     int n = LENGTH(sy), p = LENGTH(sa), lop = asLogical(op);
@@ -54,6 +54,17 @@ SEXP KalmanLike(SEXP sy, SEXP sZ, SEXP sa, SEXP sP, SEXP sT, SEXP sV, SEXP sh, S
     if (TYPEOF(sy) != REALSXP || TYPEOF(sZ) != REALSXP || TYPEOF(sa) != REALSXP || TYPEOF(sP) != REALSXP ||
         TYPEOF(sT) != REALSXP || TYPEOF(sV) != REALSXP)
         error(_("invalid argument type"));
+
+    /* Avoid modifying arguments unless fast=TRUE */
+    if (!LOGICAL(fast)[0])
+    {
+        PROTECT(sP = duplicate(sP));
+        P = REAL(sP);
+        PROTECT(sa = duplicate(sa));
+        a = REAL(sa);
+        PROTECT(sPn = duplicate(sPn));
+        Pnew = REAL(sPn);
+    }
 
     anew = (double *)R_alloc(p, sizeof(double));
     M = (double *)R_alloc(p, sizeof(double));
@@ -135,6 +146,8 @@ SEXP KalmanLike(SEXP sy, SEXP sZ, SEXP sa, SEXP sP, SEXP sT, SEXP sV, SEXP sh, S
         REAL(res)[0] = ssq;
         REAL(res)[1] = sumlog;
         UNPROTECT(1);
+        if (!LOGICAL(fast)[0])
+            UNPROTECT(3);
         return ans;
     }
     else
@@ -142,6 +155,8 @@ SEXP KalmanLike(SEXP sy, SEXP sZ, SEXP sa, SEXP sP, SEXP sT, SEXP sV, SEXP sh, S
         res = allocVector(REALSXP, 2);
         REAL(res)[0] = ssq;
         REAL(res)[1] = sumlog;
+        if (!LOGICAL(fast)[0])
+            UNPROTECT(3);
         return res;
     }
 }
@@ -351,7 +366,7 @@ SEXP KalmanSmooth(SEXP sy, SEXP sZ, SEXP sa, SEXP sP, SEXP sT, SEXP sV, SEXP sh,
     return res;
 }
 
-SEXP KalmanFore(SEXP nahead, SEXP sZ, SEXP sa0, SEXP sP0, SEXP sT, SEXP sV, SEXP sh)
+SEXP KalmanFore(SEXP nahead, SEXP sZ, SEXP sa0, SEXP sP0, SEXP sT, SEXP sV, SEXP sh, SEXP fast)
 {
     SEXP res, forecasts, se;
     int n = asReal(nahead), p = LENGTH(sa0);
@@ -371,7 +386,13 @@ SEXP KalmanFore(SEXP nahead, SEXP sZ, SEXP sa0, SEXP sP0, SEXP sT, SEXP sV, SEXP
     PROTECT(res = allocVector(VECSXP, 2));
     SET_VECTOR_ELT(res, 0, forecasts = allocVector(REALSXP, n));
     SET_VECTOR_ELT(res, 1, se = allocVector(REALSXP, n));
-
+    if (!LOGICAL(fast)[0])
+    {
+        PROTECT(sa0 = duplicate(sa0));
+        a = REAL(sa0);
+        PROTECT(sP0 = duplicate(sP0));
+        P = REAL(sP0);
+    }
     for (l = 0; l < n; l++)
     {
         fc = 0.0;
