@@ -1039,7 +1039,7 @@ LoopNode: /* Generate a node */
         {
             key = it[i] + key * kyy;
         }
-        if (key < 0)
+        if (key < -1)
             PROBLEM "Bug in FEXACT: gave negative key" RECOVER(NULL_ENTRY);
         /* Table index */
         ipn = key % ldst + 1;
