@@ -129,8 +129,8 @@ static R_CallMethodDef CallEntries[] = {{"R_cutree", (DL_FUNC)&R_cutree, 2},
                                         {"Invtrans", (DL_FUNC)&Invtrans, 2},
                                         {"Gradtrans", (DL_FUNC)&Gradtrans, 2},
                                         {"ARMAtoMA", (DL_FUNC)&ARMAtoMA, 3},
-                                        {"KalmanLike", (DL_FUNC)&KalmanLike, 10},
-                                        {"KalmanFore", (DL_FUNC)&KalmanFore, 7},
+                                        {"KalmanLike", (DL_FUNC)&KalmanLike, 11},
+                                        {"KalmanFore", (DL_FUNC)&KalmanFore, 8},
                                         {"KalmanSmooth", (DL_FUNC)&KalmanSmooth, 9},
                                         {"ARIMA_undoPars", (DL_FUNC)&ARIMA_undoPars, 2},
                                         {"ARIMA_transPars", (DL_FUNC)&ARIMA_transPars, 3},
